<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingredient_widget_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ingredient_quantity"
            style="@style/FragmentIngListStyle"
            android:layout_marginTop="@dimen/ingr_list_top"
            tools:text="@string/ingredient_quantity" />

        <TextView
            android:id="@+id/ingredient_measure"
            style="@style/FragmentIngListStyle"
            android:layout_marginStart="4dp"
            android:layout_marginTop="@dimen/ingr_list_top"
            tools:text="@string/ingredient_measure" />
    </LinearLayout>

    <TextView
        android:id="@+id/ingredient_name"
        style="@style/FragmentIngListStyle"
        tools:text="@string/ingredient_name" />

</LinearLayout>