<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/exoplayer_margin_start"
        android:layout_marginEnd="@dimen/exoplayer_margin_end"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/thumbnail_url"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/exoplayer_margin_start"
        android:layout_marginEnd="@dimen/exoplayer_margin_end"
        android:contentDescription="@string/step_image"
        android:visibility="gone"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step_long_description"
        style="@style/FragmentStepsDescriptionStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/exoplayer_margin_start"
        android:layout_marginTop="@dimen/step_long_top"
        android:layout_marginEnd="@dimen/exoplayer_margin_end"
        android:background="@color/colorSecondary"
        android:padding="8dp"
        android:text="@string/step_instructions"
        android:textColor="@color/ingredientTextColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerView" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/prev_button_top"
        android:layout_marginEnd="8dp"
        android:background="@color/colorSecondary"
        android:focusable="false"
        android:text="@string/previous_step"
        android:textColor="@color/ingredientTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/next_button"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintRight_toLeftOf="@id/next_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_long_description"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/next_button_top"
        android:layout_marginEnd="32dp"
        android:background="@color/colorSecondary"
        android:focusable="false"
        android:text="@string/next_step"
        android:textColor="@color/ingredientTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/next_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_long_description"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>